# arxiv-honyaku

./: .dockerignore  .gitignore  Dockerfile  README.md  arxiv-honyaku.ollama.toml  arxiv-honyaku.toml  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml
prompts/: translation-prompts.toml
scripts/: install_texlive.sh  run_ollama_gemma_translate.sh
src/arxiv_honyaku/: __init__.py  api.py  bootstrap.py  config.py  prompts.py
src/arxiv_honyaku/adapters/: __init__.py  arxiv_http.py  http_llm.py  latexmk.py  state_file.py  tex_project.py
src/arxiv_honyaku/core/: __init__.py  arxiv_id.py  chunker.py  japanese_tex.py  latex_comments.py  models.py  ports.py  progress.py  service.py  text_normalization.py  translation_preparation.py  translation_runner.py  translation_validation.py
src/arxiv_honyaku/interfaces/: __init__.py  cli.py  cli_progress.py  web.py
